src/main/java/kmade/kmade/adaptatorFC/parserExpression/Precondition.java
/* Generated By:JavaCC: Do not edit this line. Precondition.java */
package kmade.kmade.adaptatorFC.parserExpression;

import kmade.kmade.KMADEConstant;
import kmade.nmda.schema.expression.AndOperator;
import kmade.nmda.schema.expression.AttributExpressExpression;
import kmade.nmda.schema.expression.BooleanConstant;
import kmade.nmda.schema.expression.DiffOperator;
import kmade.nmda.schema.expression.EqualOperator;
import kmade.nmda.schema.expression.EqualityOperator;
import kmade.nmda.schema.expression.ExpressException;
import kmade.nmda.schema.expression.GetFunction;
import kmade.nmda.schema.expression.GetUnaryFunction;
import kmade.nmda.schema.expression.GroupExpressExpression;
import kmade.nmda.schema.expression.InfEqualOperator;
import kmade.nmda.schema.expression.InfOperator;
import kmade.nmda.schema.expression.IsEmptyUnaryFunction;
import kmade.nmda.schema.expression.IsExistAtFunction;
import kmade.nmda.schema.expression.IsExistFunction;
import kmade.nmda.schema.expression.LengthFunction;
import kmade.nmda.schema.expression.LengthUnaryFunction;
import kmade.nmda.schema.expression.NodeExpression;
import kmade.nmda.schema.expression.NotUnaryFunction;
import kmade.nmda.schema.expression.NumberConstant;
import kmade.nmda.schema.expression.OrOperator;
import kmade.nmda.schema.expression.ParenthesisExpression;
import kmade.nmda.schema.expression.RelationalOperator;
import kmade.nmda.schema.expression.StringConstant;
import kmade.nmda.schema.expression.SupEqualOperator;
import kmade.nmda.schema.expression.SupOperator;
import kmade.nmda.schema.expression.UserBoolean;
import kmade.nmda.schema.expression.UserNumber;
import kmade.nmda.schema.expression.UserString;
import kmade.nmda.schema.metaobjet.NumberValue;
@SuppressWarnings({"all"})

public class Precondition implements PreconditionConstants {

  final public NodeExpression expression() throws ParseException {
        NodeExpression node;
    if (jj_2_1(2)) {
      jj_consume_token(NUMBER);
      jj_consume_token(0);
                           {if (true) throw new ParseException(KMADEConstant.NO_FIRST_EXPRESSION_MESSAGE);}
    } else if (jj_2_2(2)) {
      jj_consume_token(STRING);
      jj_consume_token(0);
                       {if (true) throw new ParseException(KMADEConstant.NO_FIRST_EXPRESSION_MESSAGE);}
    } else if (jj_2_3(2)) {
      jj_consume_token(NUMBER);
      jj_consume_token(NUMBER);
                          {if (true) throw new ParseException();}
    } else if (jj_2_4(2)) {
      jj_consume_token(UNKNOWN_NUMBER);
      jj_consume_token(0);
                               {if (true) throw new ParseException(KMADEConstant.NO_FIRST_EXPRESSION_MESSAGE);}
    } else if (jj_2_5(2)) {
      jj_consume_token(UNKNOWN_STRING);
      jj_consume_token(0);
                               {if (true) throw new ParseException(KMADEConstant.NO_FIRST_EXPRESSION_MESSAGE);}
    } else if (jj_2_6(2)) {
      node = conditionalOrExpression();
      jj_consume_token(0);
                if (node instanceof StringConstant || node instanceof NumberConstant
                                || node instanceof UserNumber || node instanceof UserString
                                || node instanceof LengthUnaryFunction || node instanceof LengthFunction) {
                        {if (true) throw new ParseException(KMADEConstant.NO_FIRST_EXPRESSION_MESSAGE);}
                }
                if (node instanceof GetFunction) {
                        if (!node.isBoolean()) {
                                {if (true) throw new ParseException(KMADEConstant.NO_FIRST_EXPRESSION_MESSAGE);}
                        }
                }
                {if (true) return node;}
    } else if (jj_2_7(2)) {
      jj_consume_token(0);
            {if (true) throw new ParseException(KMADEConstant.NO_EXPRESSION_MESSAGE);}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public NodeExpression conditionalOrExpression() throws ParseException {
        NodeExpression left;
        NodeExpression right;
        OrOperator orOp;
    left = conditionalAndExpression();
    label_1:
    while (true) {
      if (jj_2_8(2)) {
        ;
      } else {
        break label_1;
      }
      jj_consume_token(OR);
                 orOp = new OrOperator(left);
      right = conditionalAndExpression();
        if (orOp != null) {
                orOp.setRightNode(right);
                left = orOp;
        }
    }
                {if (true) return left;}
    throw new Error("Missing return statement in function");
  }

  final public NodeExpression conditionalAndExpression() throws ParseException {
        NodeExpression left;
        NodeExpression right;
        AndOperator andOp;
    left = equalityExpression();
    label_2:
    while (true) {
      if (jj_2_9(2)) {
        ;
      } else {
        break label_2;
      }
      jj_consume_token(AND);
                  andOp = new AndOperator(left);
      right = equalityExpression();
        if (andOp != null) {
                andOp.setRightNode(right);
                left = andOp;
        }
    }
                {if (true) return left;}
    throw new Error("Missing return statement in function");
  }

  final public NodeExpression equalityExpression() throws ParseException {
        NodeExpression left;
        NodeExpression right;
        EqualityOperator compOp;
    left = relationExpression();
    label_3:
    while (true) {
      if (jj_2_10(2)) {
        ;
      } else {
        break label_3;
      }
      if (jj_2_11(2)) {
        jj_consume_token(EQUAL);
                    compOp = new EqualOperator(left);
      } else if (jj_2_12(2)) {
        jj_consume_token(NOT_EQUAL);
                    compOp = new DiffOperator(left);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      right = relationExpression();
        if (compOp != null) {
                compOp.setRightNode(right);
                left = compOp;
        }
    }
                {if (true) return left;}
    throw new Error("Missing return statement in function");
  }

  final public NodeExpression relationExpression() throws ParseException {
        NodeExpression left;
        NodeExpression right;
        RelationalOperator relOp;
    left = unaryExpressionNotPlusMinus();
    label_4:
    while (true) {
      if (jj_2_13(2)) {
        ;
      } else {
        break label_4;
      }
      if (jj_2_14(2)) {
        jj_consume_token(INF);
                  relOp = new InfOperator(left);
      } else if (jj_2_15(2)) {
        jj_consume_token(SUP);
              relOp = new SupOperator(left);
      } else if (jj_2_16(2)) {
        jj_consume_token(INF_EQUAL);
                    relOp = new InfEqualOperator(left);
      } else if (jj_2_17(2)) {
        jj_consume_token(SUP_EQUAL);
                    relOp = new SupEqualOperator(left);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      right = unaryExpressionNotPlusMinus();
        if (relOp != null) {
                relOp.setRightNode(right);
                left = relOp;
        }
    }
        {if (true) return left;}
    throw new Error("Missing return statement in function");
  }

  final public NodeExpression unaryExpressionNotPlusMinus() throws ParseException {
  NodeExpression t;
    if (jj_2_18(2)) {
      jj_consume_token(NOT);
      t = primaryExpression();
                                          {if (true) return new NotUnaryFunction(t);}
    } else if (jj_2_19(2)) {
      t = primaryExpression();
                                  {if (true) return t;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public NodeExpression primaryExpression() throws ParseException {
        Token myToken;
        NodeExpression node;
    if (jj_2_20(2)) {
      node = length();
                      {if (true) return node;}
    } else if (jj_2_21(2)) {
      node = isExist();
                       {if (true) return node;}
    } else if (jj_2_22(2)) {
      node = isEmpty();
                       {if (true) return node;}
    } else if (jj_2_23(2)) {
      node = getValue();
                        {if (true) return node;}
    } else if (jj_2_24(2)) {
      myToken = jj_consume_token(STRING);
                {if (true) return new StringConstant(myToken.image.substring(1,myToken.image.length() - 1));}
    } else if (jj_2_25(2)) {
      myToken = jj_consume_token(NUMBER);
                {if (true) return new NumberConstant(new NumberValue(myToken.image));}
    } else if (jj_2_26(2)) {
      myToken = jj_consume_token(BOOLEAN);
                {if (true) return new BooleanConstant(Boolean.parseBoolean(myToken.image));}
    } else if (jj_2_27(2)) {
      jj_consume_token(UNKNOWN_NUMBER);
                         {if (true) return new UserNumber();}
    } else if (jj_2_28(2)) {
      jj_consume_token(UNKNOWN_STRING);
                         {if (true) return new UserString();}
    } else if (jj_2_29(2)) {
      jj_consume_token(UNKNOWN_BOOLEAN);
                          {if (true) return new UserBoolean();}
    } else if (jj_2_30(2)) {
      jj_consume_token(PARO);
      node = conditionalOrExpression();
      jj_consume_token(PARF);
                                                         {if (true) return new ParenthesisExpression(node);}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public NodeExpression getValue() throws ParseException {
        Token myGroupToken;
        Token myAttrToken;
    jj_consume_token(GETVALUE);
    jj_consume_token(PARO);
    myGroupToken = jj_consume_token(IDENT);
    jj_consume_token(COMA);
    myAttrToken = jj_consume_token(IDENT);
    jj_consume_token(PARF);
                try {
                        GroupExpressExpression myGroupRef = new GroupExpressExpression(myGroupToken.image.substring(1).toLowerCase());
                        AttributExpressExpression myAttrRef = new AttributExpressExpression(myAttrToken.image.substring(1).toLowerCase(), myGroupRef);
                        {if (true) return new GetFunction(myGroupRef,myAttrRef);}
                } catch (ExpressException e) {
                        {if (true) throw new Error(e.toString());}
                }
    throw new Error("Missing return statement in function");
  }

  final public NodeExpression getValueDouble(GroupExpressExpression ref) throws ParseException {
        Token myGroupOrAttributToken;
        Token myAttrToken = null;
    jj_consume_token(GETVALUE);
    jj_consume_token(PARO);
    myGroupOrAttributToken = jj_consume_token(IDENT);
    if (jj_2_31(2)) {
      jj_consume_token(COMA);
      myAttrToken = jj_consume_token(IDENT);
    } else {
      ;
    }
    jj_consume_token(PARF);
                GroupExpressExpression myGroupRef = null;
                AttributExpressExpression myAttrRef = null;

                try {
                        if (myAttrToken == null) {
                                myGroupRef = ref;
                                myAttrRef = new AttributExpressExpression(myGroupOrAttributToken.image.substring(1).toLowerCase(), myGroupRef);
                                {if (true) return new GetUnaryFunction(myAttrRef);}
                        } else {
                                myGroupRef = new GroupExpressExpression(myGroupOrAttributToken.image.substring(1).toLowerCase());
                                myAttrRef = new AttributExpressExpression(myAttrToken.image.substring(1).toLowerCase(), myGroupRef);
                                {if (true) return new GetFunction(myGroupRef,myAttrRef);}
                        }
                } catch (ExpressException e) {
                        {if (true) throw new Error(e.toString());}
                }
    throw new Error("Missing return statement in function");
  }

  final public NodeExpression isExist() throws ParseException {
        Token myIdentToken;
        Token function;
        GroupExpressExpression myGroupRef;
        NodeExpression node;
    if (jj_2_32(2)) {
      function = jj_consume_token(EXIST);
    } else if (jj_2_33(2)) {
      function = jj_consume_token(EXISTAT);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(PARO);
    myIdentToken = jj_consume_token(IDENT);
                try {
                        myGroupRef = new GroupExpressExpression(myIdentToken.image.substring(1).toLowerCase());
                } catch (ExpressException e) {
                        {if (true) throw new Error(e.toString());}
                }
    jj_consume_token(COMA);
    node = conditionalOrExpressionFunction(myGroupRef);
    jj_consume_token(PARF);
                if (function.kind == EXIST) {
                        {if (true) return new IsExistFunction(myGroupRef, node);}
                } else {
                        {if (true) return new IsExistAtFunction(myGroupRef, node);}
                }
    throw new Error("Missing return statement in function");
  }

  final public NodeExpression isEmpty() throws ParseException {
        Token myIdentToken;
    jj_consume_token(EMPTY);
    jj_consume_token(PARO);
    myIdentToken = jj_consume_token(IDENT);
    jj_consume_token(PARF);
                try {
                        {if (true) return new IsEmptyUnaryFunction(new GroupExpressExpression(myIdentToken.image.substring(1).toLowerCase()));}
                } catch (ExpressException e) {
                        {if (true) throw new Error(e.toString());}
                }
    throw new Error("Missing return statement in function");
  }

  final public NodeExpression length() throws ParseException {
        Token myIdentToken;
        NodeExpression node = null;
        GroupExpressExpression myGroupRef;
    jj_consume_token(NOMBRE);
    jj_consume_token(PARO);
    myIdentToken = jj_consume_token(IDENT);
                try {
                        myGroupRef = new GroupExpressExpression(myIdentToken.image.substring(1).toLowerCase());
                } catch (ExpressException e) {
                        {if (true) throw new Error(e.toString());}
                }
    if (jj_2_34(2)) {
      jj_consume_token(COMA);
      node = conditionalOrExpressionFunction(myGroupRef);
    } else {
      ;
    }
    jj_consume_token(PARF);
                if (node == null) {
                        {if (true) return new LengthUnaryFunction(myGroupRef);}
                } else {
                        {if (true) return new LengthFunction(myGroupRef,node);}
                }
    throw new Error("Missing return statement in function");
  }

  final public NodeExpression conditionalOrExpressionFunction(GroupExpressExpression ref) throws ParseException {
        NodeExpression left;
        NodeExpression right;
        OrOperator orOp;
    left = conditionalAndExpressionFunction(ref);
    label_5:
    while (true) {
      if (jj_2_35(2)) {
        ;
      } else {
        break label_5;
      }
      jj_consume_token(OR);
                 orOp = new OrOperator(left);
      right = conditionalAndExpressionFunction(ref);
        if (orOp != null) {
                orOp.setRightNode(right);
                left = orOp;
        }
    }
                {if (true) return left;}
    throw new Error("Missing return statement in function");
  }

  final public NodeExpression conditionalAndExpressionFunction(GroupExpressExpression ref) throws ParseException {
        NodeExpression left;
        NodeExpression right;
        AndOperator andOp;
    left = equalityExpressionFunction(ref);
    label_6:
    while (true) {
      if (jj_2_36(2)) {
        ;
      } else {
        break label_6;
      }
      jj_consume_token(AND);
                  andOp = new AndOperator(left);
      right = equalityExpressionFunction(ref);
        if (andOp != null) {
                andOp.setRightNode(right);
                left = andOp;
        }
    }
                {if (true) return left;}
    throw new Error("Missing return statement in function");
  }

  final public NodeExpression equalityExpressionFunction(GroupExpressExpression ref) throws ParseException {
        NodeExpression left;
        NodeExpression right;
        EqualityOperator compOp;
    left = relationExpressionFunction(ref);
    label_7:
    while (true) {
      if (jj_2_37(2)) {
        ;
      } else {
        break label_7;
      }
      if (jj_2_38(2)) {
        jj_consume_token(EQUAL);
                    compOp = new EqualOperator(left);
      } else if (jj_2_39(2)) {
        jj_consume_token(NOT_EQUAL);
                    compOp = new DiffOperator(left);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      right = relationExpressionFunction(ref);
        if (compOp != null) {
                compOp.setRightNode(right);
                left = compOp;
        }
    }
                {if (true) return left;}
    throw new Error("Missing return statement in function");
  }

  final public NodeExpression relationExpressionFunction(GroupExpressExpression ref) throws ParseException {
        NodeExpression left;
        NodeExpression right;
        RelationalOperator relOp;
    left = unaryExpressionNotPlusMinusFunction(ref);
    label_8:
    while (true) {
      if (jj_2_40(2)) {
        ;
      } else {
        break label_8;
      }
      if (jj_2_41(2)) {
        jj_consume_token(INF);
                  relOp = new InfOperator(left);
      } else if (jj_2_42(2)) {
        jj_consume_token(SUP);
              relOp = new SupOperator(left);
      } else if (jj_2_43(2)) {
        jj_consume_token(INF_EQUAL);
                    relOp = new InfEqualOperator(left);
      } else if (jj_2_44(2)) {
        jj_consume_token(SUP_EQUAL);
                    relOp = new SupEqualOperator(left);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      right = unaryExpressionNotPlusMinusFunction(ref);
        if (relOp != null) {
                relOp.setRightNode(right);
                left = relOp;
        }
    }
        {if (true) return left;}
    throw new Error("Missing return statement in function");
  }

  final public NodeExpression unaryExpressionNotPlusMinusFunction(GroupExpressExpression ref) throws ParseException {
  NodeExpression t;
    if (jj_2_45(2)) {
      jj_consume_token(NOT);
      t = primaryExpressionFunction(ref);
                                                     {if (true) return new NotUnaryFunction(t);}
    } else if (jj_2_46(2)) {
      t = primaryExpressionFunction(ref);
